--- a/game.html
+++ b/game.html
@@ -57,6 +57,25 @@
       color: rgb(255, 0, 0);
       z-index: 101;
     }
+
+
+
+	#nameInput {
+    border-radius: 5px;
+    border: 2px solid white;
+    background-color: black;
+    color: white;
+    font-family: 'Arial', sans-serif;
+}
+
+#nextButton {
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
   </style>
 		
 	</head>
@@ -77,6 +96,15 @@
     <button id="mainMenuButtonDeath">Main Menu</button>
     <button id="restartButtonDeath">Restart Level</button>
   </div>
+
+
+  <div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
+    <div id="dialogueBox" style="text-align: center; padding: 20px; background-color: rgba(0, 0, 0, 0.8); border: 2px solid white; border-radius: 10px; width: 50%;">
+        <p id="dialogueText">Hello wanderer, What is your name?</p>
+        <input type="text" id="nameInput" placeholder="Enter your name" style="display: none; padding: 10px; width: 80%; font-size: 16px;"/>
+        <button id="nextButton" style="margin-top: 20px; padding: 10px 20px; font-size: 16px;">Next</button>
+    </div>
+</div>
 
 		
 		 <script type="module" src="/main.js"></script> 
