--- a/game.html
+++ b/game.html
@@ -1,112 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Galaxy Meow</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<style>
-    body { margin: 0; overflow: hidden; }
-    
-    /* Health Bar */
-    #healthBar {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      font-size: 20px;
-      color: rgb(165, 244, 255);
-      background: rgba(0, 0, 0, 0.5);
-      padding: 5px;
-      border-radius: 5px;
-    }
+<head>
+    <meta charset="utf-8">
+    <title>Galaxy Meow</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body { margin: 0; overflow: hidden; }
+        #background { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 3; }
+        #gameCanvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 4; }
 
-    /* Exit Menu */
-    #exitMenu {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.9);
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      color: rgb(233, 107, 255);
-      z-index: 100;
-    }
+        /* Health Bar */
+        #healthBar {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            font-size: 20px;
+            color: rgb(165, 244, 255);
+            background: rgba(0, 0, 0, 0.5);
+            padding: 5px;
+            border-radius: 5px;
+            z-index: 5;
+        }
 
-    /* Buttons in Exit Menu */
-    #exitMenu button {
-      margin: 10px;
-      padding: 10px 20px;
-	  background: rgba(233, 107, 255,0.75);
-      font-size: 16px;
-      cursor: pointer;
-    }
+        /* Exit Menu */
+        #exitMenu {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            color: rgb(233, 107, 255);
+            z-index: 100;
+        }
 
-    /* "You Died" Message */
-    #deathMessage {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.9);
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      color: rgb(255, 0, 0);
-      z-index: 101;
-    }
+        /* Buttons in Exit Menu */
+        #exitMenu button {
+            margin: 10px;
+            padding: 10px 20px;
+            background: rgba(233, 107, 255, 0.75);
+            font-size: 16px;
+            cursor: pointer;
+        }
 
+        /* "You Died" Message */
+        #deathMessage {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            color: rgb(255, 0, 0);
+            z-index: 101;
+        }
 
+        #nameInput {
+            border-radius: 5px;
+            border: 2px solid white;
+            background-color: black;
+            color: white;
+            font-family: 'Arial', sans-serif;
+        }
 
-	#nameInput {
-    border-radius: 5px;
-    border: 2px solid white;
-    background-color: black;
-    color: white;
-    font-family: 'Arial', sans-serif;
-}
+        #nextButton {
+            background-color: white;
+            color: black;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <!-- Background Container -->
+    <div id="background"></div>
 
-#nextButton {
-    background-color: white;
-    color: black;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
+    <div id="gameCanvas"></div>
 
-  </style>
-		
-	</head>
-	<body>
-			<!-- Health Bar -->
-  <div id="healthBar">Oxygen: 100/100</div>
+    <!-- Health Bar -->
+    <div id="healthBar">Oxygen: 100/100</div>
 
-  <!-- Exit Menu -->
-  <div id="exitMenu">
-    <h2>Are you sure?</h2>
-    <button id="mainMenuButton">Main Menu</button>
-    <button id="restartButton">Restart Level</button>
-  </div>
-
-  <!-- You Died Message -->
-  <div id="deathMessage">
-    <h2>You Suffocated!</h2>
-    <button id="mainMenuButtonDeath">Main Menu</button>
-    <button id="restartButtonDeath">Restart Level</button>
-  </div>
-
-
-  <div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
-    <div id="dialogueBox" style="text-align: center; padding: 20px; background-color: rgba(0, 0, 0, 0.8); border: 2px solid white; border-radius: 10px; width: 50%;">
-        <p id="dialogueText">Hello wanderer, What is your name?</p>
-        <input type="text" id="nameInput" placeholder="Enter your name" style="display: none; padding: 10px; width: 80%; font-size: 16px;"/>
-        <button id="nextButton" style="margin-top: 20px; padding: 10px 20px; font-size: 16px;">Next</button>
+    <!-- Exit Menu -->
+    <div id="exitMenu">
+        <h2>Are you sure?</h2>
+        <button id="mainMenuButton">Main Menu</button>
+        <button id="restartButton">Restart Level</button>
     </div>
-</div>
 
-		
-		 <script type="module" src="/main.js"></script> 
-	 </body>
-</html> 
+    <!-- You Died Message -->
+    <div id="deathMessage">
+        <h2>You Suffocated!</h2>
+        <button id="mainMenuButtonDeath">Main Menu</button>
+        <button id="restartButtonDeath">Restart Level</button>
+    </div>
+
+    <div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
+        <div id="dialogueBox" style="text-align: center; padding: 20px; background-color: rgba(0, 0, 0, 0.8); border: 2px solid white; border-radius: 10px; width: 50%;">
+            <p id="dialogueText">Hello wanderer, What is your name?</p>
+            <input type="text" id="nameInput" placeholder="Enter your name" style="display: none; padding: 10px; width: 80%; font-size: 16px;" />
+            <button id="nextButton" style="margin-top: 20px; padding: 10px 20px; font-size: 16px;">Next</button>
+        </div>
+    </div>
+
+    <script type="module" src="/main.js"></script>
+    
+</body>
+</html>
