--- a/game.html
+++ b/game.html
@@ -123,6 +123,8 @@
           border-radius: 5px;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r142/three.min.js"></script>
+
 </head>
 <body>
     <!-- Background Container -->
