--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galaxy Meow</title>
-  <style>
+  <link rel="stylesheet" href="index.css">
+  <!-- <style>
     body, html {
       margin: 0;
       padding: 0;
@@ -71,7 +72,7 @@
       float: right;
       font-size: 20px;
     }
-  </style>
+  </style> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r142/three.min.js"></script>
 
