--- a/game.html
+++ b/game.html
@@ -149,6 +149,7 @@
 
 
     <script type="module" src="/main.js"></script>
-    
+   
+    <script type="module" src="/intro.js"></script>
 </body>
 </html>
