lamp changes - not for main

--- a/game.html
+++ b/game.html
@@ -66,7 +66,8 @@
           border-radius: 5px;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r142/three.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r142/three.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script>
 
 </head>
 <body>
@@ -117,7 +118,7 @@
         <!--Popup when clicking on cat-->
         <div id="myModal">
             <div id="modal-content" style="display: flex;">
-                <img id="catImage" src="/Graphics/SpaceCat.png" alt="cat_sprite">
+                <img id="catImage" src="https://lamp.ms.wits.ac.za/~sgalaxy/public/Graphics/SpaceCat.png" alt="cat_sprite">
                 <p id="catConversation" style="color: aliceblue; font-size: large;"></p>
       
                 <div id="responses" style="display: none; flex-direction: column; margin-left: 30px;">
@@ -148,8 +149,9 @@
         </script>-->
 
 
-    <script type="module" src="/main.js"></script>
-   
-    <script type="module" src="/intro.js"></script>
+    <!-- <script type="module" src="/main.js"></script> -->
+    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/main.js"></script>
+    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/intro.js"></script>
+    <!-- <script type="module" src="/intro.js"></script> -->
 </body>
 </html>
