--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Galaxy Meow</title>
   <link rel="stylesheet" href="index.css">
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r142/three.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r142/three.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script>
+
 
 </head>
 <body>
