--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <title>Galaxy Meow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="game.css">
+   <link rel="stylesheet" href="inventory.css">
     <style>
         /* Modal popup style */
         #myModal {
@@ -135,6 +136,14 @@
         </div>
     </div>
 
+    <div class="inventory-grid" id="inventory" >
+        <div class="inventory-slot" id="slot1"></div>
+        <div class="inventory-slot" id="slot2"></div>
+        <div class="inventory-slot" id="slot3"></div>
+        <div class="inventory-slot" id="slot4"></div>
+        <div class="inventory-slot" id="slot5"></div>
+    </div>
+
 
       <!-- Settings Modal -->
   <!-- <div class="modal" id="settingsModal">
@@ -158,5 +167,6 @@
     <script type="module" src="/main.js"></script>
    
     <script type="module" src="/intro.js"></script>
+    <script type = "module" src = "/inventory.js"> </script>
 </body>
 </html>
