2nd inventory draft

--- a/game.html
+++ b/game.html
@@ -136,6 +136,10 @@
         </div>
     </div>
 
+    <div class="inventory-icon" id="bagIcon">
+        <img src="images/bag.png" alt="Bag Icon">
+    </div>
+
     <div class="inventory-grid" id="inventory" >
         <div class="inventory-slot" id="slot1"></div>
         <div class="inventory-slot" id="slot2"></div>
