--- a/game.html
+++ b/game.html
@@ -43,6 +43,40 @@
             margin: 10px;
         }
 
+        #myModal2 {
+            display: none; 
+            position: fixed; /* Fixed position to stay in place on scroll */
+            bottom: 0; /* Aligns the modal to the bottom */
+            left: 50%; /* Centers the modal horizontally */
+            transform: translateX(-50%); /* Offsets the modal back to center */
+            width: 100%; /* Width can be adjusted based on content */
+            height: 100%; /* Height can be adjusted based on content */
+            z-index: 5; /* Keeps it above other elements */
+            padding: 20px; /* Padding around the content */
+        }
+
+        #modal-content2 {
+            display: flex;
+            align-items: center; /* Center items vertically */
+            justify-content: space-between; /* Space items evenly */
+            background-color: rgba(0, 0, 0, 0.5);
+            margin-bottom: 20px;
+            padding: 5px;
+            border-radius: 8px;
+            border-top: 2px solid rgb(74, 22, 123);
+            justify-content: space-between;
+            align-items: center;
+            max-width: 80%;
+            z-index: 5;
+        }
+
+        #closeModal2 {
+            cursor: pointer;
+            color: red;
+            font-size: 20px;
+            margin: 10px;
+        }
+
         #catConversation {
     overflow: hidden;
     text-align: center;
@@ -136,6 +170,14 @@
         </div>
     </div>
 
+    <div id="myModal2">
+        <div id="modal-content2">
+            <img id="catImage" src="/Graphics/SpaceCat.png" alt="cat_sprite">
+            <p id="catConversation2" style="color: aliceblue; font-size: large;"></p>
+            <span id="closeModal2">&times;</span>
+        </div>
+    </div>
+
     <div class="inventory-icon" id="bagIcon">
         <img src="images/bag.png" alt="Bag Icon">
     </div>
@@ -169,6 +211,7 @@
 
 
     <script type="module" src="/main.js"></script>
+    <script type="module" src="/modal.js"></script>
    
     <script type="module" src="/intro.js"></script>
     <script type = "module" src = "/inventory.js"> </script>
