edited the cat/barrel image thing

--- a/game.html
+++ b/game.html
@@ -101,6 +101,12 @@
           max-height: 10%;
         }
 
+        #catImage2 {
+          max-width: 10%;
+          max-height: 10%;
+        }
+
+
         #helpButton, #dontHelpButton{
           margin: 5px;
           padding: 5px 5px;
@@ -179,7 +185,7 @@
 
     <div id="myModal2">
         <div id="modal-content2">
-            <img id="catImage" src="/Graphics/SpaceCat.png" alt="cat_sprite">
+            <img id="catImage2" src="/Graphics/SpaceCat.png" alt="cat_sprite">
             <p id="catConversation2" style="color: aliceblue; font-size: large;"></p>
             <div id="responses2" style="display: none; flex-direction: column; margin-left: 30px;">
                 <button id="helpButton2">Add to inventory!</button>
