commit lamp fixes

--- a/game.html
+++ b/game.html
@@ -141,7 +141,7 @@
     </div>
 
     <div class="inventory-icon" id="bagIcon">
-        <img src="images/bag.png" alt="Bag Icon">
+        <img src="https://lamp.ms.wits.ac.za/~sgalaxy/public/images/bag.png" alt="Bag Icon">
     </div>
 
     <div class="inventory-grid" id="inventory" >
@@ -174,7 +174,7 @@
 
 
 
-    <script type = "module" src = "/inventory.js"> </script>
+    <script type = "module" src = "https://lamp.ms.wits.ac.za/~sgalaxy/inventory.js"> </script>
     <!-- <script type="module" src="/main.js"></script> -->
     <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/main.js"></script>
     <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/intro.js"></script>
