--- a/game.html
+++ b/game.html
@@ -158,18 +158,6 @@
         </div>
     </div>
 
-    <!-- explanation before game starts screen -->
-    <!-- <div id="explanationScreen" style="display: none; flex-direction: column; justify-content: center; align-items: center;">
-        <h1>Game Controls and Objective</h1>
-        <p>Move: WASD or Arrow Keys</p>
-        <p>Restart/Exit Game: Escape</p>
-        <p>Objective: You are trapped on the moon and must escape.</p>
-        <p>Collect four items to reconstruct the teleporter</p>
-        <button id="startGameButton">Start Game</button>
-    </div> -->
-
-
-
         <!--Popup when clicking on cat-->
         <div id="myModal">
             <div id="modal-content" style="display: flex;">
@@ -189,7 +177,7 @@
 
     <div id="myModal2">
         <div id="modal-content2">
-            <img id="catImage2" src="/Graphics/SpaceCat.png" alt="cat_sprite">
+            <img id="catImage2" src="https://lamp.ms.wits.ac.za/~sgalaxy/public/Graphics/SpaceCat.png" alt="cat_sprite">
             <p id="catConversation2" style="color: aliceblue; font-size: large;"></p>
             <div id="responses2" style="display: none; flex-direction: column; margin-left: 30px;">
                 <button id="helpButton2">Add to inventory!</button>
@@ -210,34 +198,11 @@
         <div class="inventory-slot" id="slot5"></div>
     </div>
 
+    <script type= "module" src="https://lamp.ms.wits.ac.za/~sgalaxy/modal.js"></script>
+    <script type= "module" src ="https://lamp.ms.wits.ac.za/~sgalaxy/inventory.js"> </script>
+    <script type= "module" src="https://lamp.ms.wits.ac.za/~sgalaxy/main.js"></script>
+    <script type= "module" src="https://lamp.ms.wits.ac.za/~sgalaxy/intro.js"></script>
 
-
-      <!-- Settings Modal -->
-  <!-- <div class="modal" id="settingsModal">
-    <div class="modal-header">Settings <span class="modal-close" id="closeSettings">×</span></div>
-    <p>Settings not implemented yet.</p>
-  </div> -->
-
-        <!--<script>
-            // Get the text element and the response buttons
-            const catConversation = document.getElementById('catConversation');
-            const responses = document.getElementById('responses');
-    
-            // Listen for the end of the typing animation
-            catConversation.addEventListener('animationend', () => {
-                // Once the typing animation finishes, display the response buttons
-                responses.style.display = 'flex';
-            });
-        </script>-->
-
-
-
-    <script type="module" src="/modal.js"></script>
-    <script type = "module" src = "https://lamp.ms.wits.ac.za/~sgalaxy/inventory.js"> </script>
-    <!-- <script type="module" src="/main.js"></script> -->
-    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/main.js"></script>
-    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/intro.js"></script>
-    <!-- <script type="module" src="/intro.js"></script> -->
 
 
 </body>
