welcome music and ambiance sound

--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@
   </div>
 
   <script>
+    //create background audio
+const listener = new THREE.AudioListener();
+
+
+// Create a global audio source
+const sound = new THREE.Audio(listener);
+
+// Load a sound and set it as the Audio object's buffer
+const audioLoader = new THREE.AudioLoader();
+audioLoader.load('/sound/welcome-music.mp3', function (buffer) {
+  sound.setBuffer(buffer);
+  sound.setLoop(false);
+  sound.setVolume(0.5);
+  sound.play();
+});
+
+
     // Start button 
     document.getElementById('startGame').addEventListener('click', function() {
       window.location.href = 'game.html';
