--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li>Oxygen Meter - You get 100 units of oxygen</li>
       <li>If you need help - Click The Cat</li>
       <li>Esc - Restart/Leave game</li>
-      <li>Mouse Right click and drag - Click and look around</li>
+      <li>Mouse - Look around and click</li>
     </ul>
   </div>
 
