commit collison detection for objects

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
       <br>Dineo
       <br>Busisiwe
     </p>
+
+    <p>Imported Models:
+      <br>Rock by Danni Bittman [CC-BY] via Poly Pizza
+      <br>Rocks by Quaternius
+      <br>Rock by Quaternius renamed as RockQ
+      <br>basic stone 3 by felix stief [CC-BY] via Poly Pizza renamed as basic_stone_3
+      <br>Rocketship by jeremy [CC-BY] via Poly Pizza
+      <br>Rubble Rocks by Kyle Hickman [CC-BY] via Poly Pizza renamed as Rubble_Rocks
+      <br>Ruin by nha pham [CC-BY] via Poly Pizza
+    </p>
   </div>
 
   <script>
