--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       <li>Oxygen Meter - You get 100 units of oxygen</li>
       <li>If you need help - Click The Cat</li>
       <li>Esc - Restart/Leave game</li>
-      <li>Mouse - Look around and click</li>
+      <li>Mouse click - Click Objects</li>
+      <li>Mouse right click and drag- Look around the map</li>
     </ul>
   </div>
 
@@ -64,6 +65,8 @@
       <br>Rocketship by jeremy [CC-BY] via Poly Pizza
       <br>Rubble Rocks by Kyle Hickman [CC-BY] via Poly Pizza renamed as Rubble_Rocks
       <br>Ruin by nha pham [CC-BY] via Poly Pizza
+      <br>Space rock by 11.10melons on Sketchfab
+      <br>Comet by Poly by Google [CC-BY] via Poly Pizza
     </p>
   </div>
 
