--- a/game.html
+++ b/game.html
@@ -287,6 +287,7 @@
     <script type="module" src="/levelMenus.js"></script>
     <script type="module" src="/intro.js"></script>
     <script type = "module" src = "/inventory.js"> </script>
+    <script type = "module" src = "/cat.js"> </script>
 
     <script>
 
