--- a/game.html
+++ b/game.html
@@ -154,6 +154,7 @@
             <div style="display: flex; justify-content: center; align-items: center">
             <input type="text" id="nameInput" placeholder="Enter your name" style="display: none; padding: 10px; width: 80%; font-size: 16px;" />
             </div>
+            <button id="backButton" onclick="window.location.href='index.html'" style="margin-right: 10px; padding: 10px 20px; font-size: 16px;">Back</button>
             <button id="nextButton" style="margin-top: 20px; padding: 10px 20px; font-size: 16px;">Next</button>
         </div>
     </div>
