--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
       <li>S - Move backward</li>
       <li>A - Move left</li>
       <li>D - Move right</li>
+      <li>Space - Jump</li>
       <li>Oxygen Meter - You get 100 units of oxygen</li>
       <li>If you need help - Click The Cat</li>
       <li>Esc - Restart/Leave game</li>
-      <li>Mouse click - Click Objects</li>
-      <li>Mouse right click and drag- Look around the map</li>
+      <li>Shift - Opens inventory</li>
+      <li>Left mouse click - To select objects</li>
+      <li>Right mouse click and drag - Look around the map</li>
     </ul>
   </div>
 
