commit fixes to links and missing variables

--- a/level2.html
+++ b/level2.html
@@ -235,7 +235,7 @@
     <!--Popup when clicking on cat-->
     <div id="myModal">
         <div id="modal-content">
-            <img id="catImage" src="/Graphics/SpaceCat.png" alt="cat_sprite">
+            <img id="catImage" src="https://lamp.ms.wits.ac.za/~sgalaxy/public/Graphics/SpaceCat.png" alt="cat_sprite">
             <p id="catConversation" style="color: aliceblue; font-size: large;"></p>
 
             <div id="responses" style="display: none; flex-direction: column; margin-left: 30px;">
@@ -248,7 +248,7 @@
 
     <div id="myModal2">
         <div id="modal-content2">
-            <img id="catImage2" src="/Graphics/SpaceCat.png" alt="cat_sprite">
+            <img id="catImage2" src="https://lamp.ms.wits.ac.za/~sgalaxy/public/Graphics/SpaceCat.png" alt="cat_sprite">
             <p id="catConversation2" style="color: aliceblue; font-size: large;"></p>
             <div id="responses2" style="display: none; flex-direction: column; margin-left: 30px;">
                 <button id="helpButton2">Add to inventory!</button>
@@ -258,7 +258,7 @@
     </div>
     
     <div class="inventory-icon" id="bagIcon">
-        <img src="images/bag.png" alt="Bag Icon">
+        <img src="https://lamp.ms.wits.ac.za/~sgalaxy/publicimages/bag.png" alt="Bag Icon">
     </div>
 
     <div class="inventory-grid" id="inventory" >
@@ -295,12 +295,12 @@
         <script>
        
        pipVideo.addEventListener('mouseenter', () => {
-        console.log('Mouse entered PiP video');
+        //console.log('Mouse entered PiP video');
         document.getElementById('pipControls').style.display = 'block';
     });
 
     pipVideo.addEventListener('mouseleave', () => {
-        console.log('Mouse left PiP video');
+        //console.log('Mouse left PiP video');
         document.getElementById('pipControls').style.display = 'none';
     });
 
@@ -336,10 +336,10 @@ function setCameraAngle(angle) {
 
 
         </script>
-    <script type="module" src="/level2.js"></script>
-    <script type="module" src="/modal.js"></script>
-    <script type="module" src="/levelMenus.js"></script>
-    <script type="module" src="/level2Intro.js"></script>
-    <script type = "module" src = "/inventory.js"> </script>
+    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/level2.js"></script>
+    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/modal.js"></script>
+    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/levelMenus.js"></script>
+    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/level2Intro.js"></script>
+    <script type = "module" src = "https://lamp.ms.wits.ac.za/~sgalaxy/inventory.js"> </script>
 </body>
 </html>
