--- a/game.html
+++ b/game.html
@@ -184,7 +184,7 @@
 
     <div id="blueprint-overlay" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8); z-index: 1000;">
         <div style="position: relative; margin: auto; top: 10%; width: 80%; text-align: center;">
-          <img id="blueprint-image" src="images/blueprint.jpg" alt="Blueprint" style="max-width: 100%; height: auto;">
+          <img id="blueprint-image" src="https://lamp.ms.wits.ac.za/~sgalaxy/public/images/blueprint.jpg" alt="Blueprint" style="max-width: 100%; height: auto;">
           <button id="close-blueprint" style="position: absolute; top: 10px; right: 10px; background-color: red; color: white; font-size: 20px; border: none; cursor: pointer;">X</button>
         </div>
       </div>
@@ -270,7 +270,7 @@
         <div class="inventory-slot" id="slot4"></div>
         <div class="inventory-slot" id="slot5"></div>
     </div>
-  
+    <span id = "inventoryFull"></span>
   
   
 
@@ -279,7 +279,7 @@
     <script type= "module" src="https://lamp.ms.wits.ac.za/~sgalaxy/main.js"></script>
     <script type= "module" src="https://lamp.ms.wits.ac.za/~sgalaxy/intro.js"></script>
     <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/levelMenus.js"></script>
-    <span id = "https://lamp.ms.wits.ac.za/~sgalaxy/inventoryFull"></span>
+    
 
 
 
