--- a/game.html
+++ b/game.html
@@ -46,9 +46,8 @@
         #myModal2 {
             display: none; 
             position: fixed; /* Fixed position to stay in place on scroll */
-            bottom: 0; /* Aligns the modal to the bottom */
-            left: 50%; /* Centers the modal horizontally */
-            transform: translateX(-50%); /* Offsets the modal back to center */
+            top: 30%; /* Move it down halfway */
+            left: 10%;
             width: 100%; /* Width can be adjusted based on content */
             height: 100%; /* Height can be adjusted based on content */
             z-index: 5; /* Keeps it above other elements */
@@ -104,12 +103,12 @@
 }
 
 
-        #catConversation {
-    overflow: hidden;
-    text-align: center;
-    white-space: nowrap; /* Prevent text wrapping */
-    max-width: 60%; /* Limit the maximum width */
-    animation: typing 3.5s steps(60, end) forwards; /* Keep 'forwards' to retain final state */
+#catConversation {
+    overflow: hidden;          /* Hide overflow content */
+    text-align: center;       /* Center text */
+    max-width: 90%;           /* Limit the maximum width */
+    white-space: nowrap;      /* Prevent text wrapping initially */
+    animation: typing 3.5s steps(60, end) forwards; /* Typing animation */
 }
 
 #inventoryFull {
