commit some fixes

--- a/game.html
+++ b/game.html
@@ -344,13 +344,13 @@ function setCameraAngle(angle) {
 
     <script>
 
-        closeExit = document.getElementById("closeExit");
-        exitMenu = document.getElementById("exitMenu")
+        // closeExit = document.getElementById("closeExit");
+        // exitMenu = document.getElementById("exitMenu")
 
-        // Close exitMenu modal on button click
-        closeExit.addEventListener('click', () => {
-            exitMenu.style.display = 'none'; 
-        });
+        // // Close exitMenu modal on button click
+        // closeExit.addEventListener('click', () => {
+        //     exitMenu.style.display = 'none'; 
+        // });
     </script>
 
 </body>
