--- a/game.html
+++ b/game.html
@@ -46,9 +46,10 @@
         #myModal2 {
             display: none; 
             position: fixed; /* Fixed position to stay in place on scroll */
-            bottom: 0; /* Aligns the modal to the bottom */
-            left: 50%; /* Centers the modal horizontally */
-            transform: translateX(-50%); /* Offsets the modal back to center */
+            /*bottom: 0;  Aligns the modal to the bottom */
+            top: 30%;
+            left: 10%; /* Centers the modal horizontally */
+            /*transform: translateX(-50%);  Offsets the modal back to center */
             width: 100%; /* Width can be adjusted based on content */
             height: 100%; /* Height can be adjusted based on content */
             z-index: 5; /* Keeps it above other elements */
