--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   </div>
 
   <!-- Settings Modal -->
-  <div class="modal" id="settingsModal">
+  <!-- <div class="modal" id="settingsModal">
     <div class="modal-header">Settings <span class="modal-close" id="closeSettings">×</span></div>
     <p>Settings not implemented yet.</p>
-  </div>
+  </div> -->
 
   <!-- Controls Modal -->
   <div class="modal" id="controlsModal">
