commit lamp edits

--- a/level2.html
+++ b/level2.html
@@ -19,12 +19,18 @@
     <!-- Three.js and game content will be rendered in the canvas attached to the body -->
 
     <!-- Import Three.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
-
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    
     <!-- Import OrbitControls from Three.js examples (this must be served correctly from your project or CDN) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/controls/OrbitControls.js"></script>
 
+
+
+
+
     <!-- Import your custom JavaScript file -->
-    <script type="module" src="level2.js"></script>
+    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/level2.js"></script>
 </body>
 </html>
