added rocks to mars

--- a/level2.html
+++ b/level2.html
@@ -24,6 +24,9 @@
     <!-- Import OrbitControls from Three.js examples (this must be served correctly from your project or CDN) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/controls/OrbitControls.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
+
     <!-- Import your custom JavaScript file -->
     <script type="module" src="level2.js"></script>
 </body>
