--- a/level2.html
+++ b/level2.html
@@ -154,6 +154,19 @@
           font-size: 13px;
           border-radius: 5px;
         }
+
+        #loadingScreen {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+        z-index: 1000;
+    }
     </style>
 </head>
 <body>
@@ -235,6 +248,11 @@
         <button id="mainMenuButtonDeath">Main Menu</button>
         <button id="restartButtonDeath">Restart Level</button>
     </div>
+
+    <!-- Loading Screen -->
+<div id="loadingScreen">
+    <p>Loading, please wait...</p>
+</div>
 
 
 
