--- a/level2.html
+++ b/level2.html
@@ -155,18 +155,6 @@
           border-radius: 5px;
         }
 
-        #loadingScreen {
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        background-color: rgba(0, 0, 0, 0.8);
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 24px;
-        z-index: 1000;
-    }
     </style>
 </head>
 <body>
@@ -249,12 +237,20 @@
         <button id="restartButtonDeath">Restart Level</button>
     </div>
 
-    <!-- Loading Screen -->
-<div id="loadingScreen">
-    <p>Loading, please wait...</p>
+
+<div id="loadingScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.9); color: white; z-index: 20; display: flex; justify-content: center; align-items: center;">
+    <p>Loading assets, please wait...</p>
 </div>
 
 
+<div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
+    <div id="dialogueBox" style="text-align: center; padding: 20px; background-color: rgba(0, 0, 0, 0.8); border: 2px solid white; border-radius: 10px; width: 50%;">
+        <p id="dialogueText">Oh wanderer, how could you input the wrong coordinites?</p>
+        <div style="display: flex; justify-content: center; align-items: center">
+        </div>
+        <button id="nextButton" style="margin-top: 20px; padding: 10px 20px; font-size: 16px;">Next</button>
+    </div>
+</div>
 
 
     <!-- Import Three.js -->
@@ -273,6 +269,7 @@
     <!-- Import your custom JavaScript file -->
     <script type="module" src="/level2.js"></script>
     <script type = "module" src = "/inventory.js"> </script>
+    <script type = "module" src = "/level2Intro.js"> </script>
     
 </body>
 </html>
