--- a/level2.html
+++ b/level2.html
@@ -255,7 +255,7 @@
 
 
     <!-- Import Three.js -->
-     <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script>
+     <!-- <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script> -->
 
     <!-- Import Three.js -->
@@ -268,12 +268,13 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/controls/OrbitControls.js"></script> -->
     <!-- <script src="https://unpkg.com/three@0.152.0/examples/js/controls/OrbitControls.js"></script> -->
      <!-- Only import more stuff for development like orbital controls.... else take it out of your commit -->
-   
+<!--    
   
   
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
 
-   
+    <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
    
 
 
