--- a/level3.html
+++ b/level3.html
@@ -25,6 +25,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/controls/OrbitControls.js"></script>
 
     <!-- Import your custom JavaScript file -->
-    <script type="module" src="level3.js"></script>
+    <script type="module" src="https://lamp.ms.wits.ac.za/~sgalaxy/level3.js"></script>
 </body>
 </html>
