Improved loading screen + level 3 paper stuff

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
       <br>Ruin by nha pham [CC-BY] via Poly Pizza
       <br>Space rock by 11.10melons on Sketchfab
       <br>Comet by Poly by Google [CC-BY] via Poly Pizza
+      <br>Space Rock by bmead92 on Sketchfab  - pink crystal renamed as space_crystal
+      <br>Debris Papers by Quaternius - renamed Debris Papers
+      <br>Small Stack of Paper by Jarlan Perez [CC-BY] via Poly Pizza - renamed as Small_Stack_of_Paper
+      <br>Paper by Poly by Google [CC-BY] via Poly Pizza
+      <br>Manila Envelope by Jarlan Perez [CC-BY] via Poly Pizza - renamed as Manila_Envelope
+      <br>Paper airplane by Poly by Google [CC-BY] via Poly Pizza - renamed Paper_airplane
+      <br>Flying saucer by Poly by Google [CC-BY] via Poly Pizza renamed as Flying_saucer
     </p>
   </div>
 
