improved credits models

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     </p>
 
     <p>Imported Models:
+      <br>Astronaut model: https://poly.pizza/m/0oBRDJ9Zl9, https://poly.pizza/m/dLHpzNdygsg
+      <br>The barrel model by by `TextureCan.com` under the Creative Commons CC0 1.0 Universe License Available at: https://www.texturecan.com/models/details/528/#google_vignette
+      <br>The skull model by `martinjario` on Sketchlab CC BY 4.0. Available at: https://skfb.ly/JrST
       <br>Rock by Danni Bittman [CC-BY] via Poly Pizza
       <br>Rocks by Quaternius
       <br>Rock by Quaternius renamed as RockQ
