--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <br>Dineo
       <br>Busisiwe
     </p>
-
+    <p>All our music and sound effects are royalty-free from [PixaBay](https://pixabay.com)</p>
     <p>Imported Models:
       <br>Astronaut model: https://poly.pizza/m/0oBRDJ9Zl9, https://poly.pizza/m/dLHpzNdygsg
       <br>The barrel model by by `TextureCan.com` under the Creative Commons CC0 1.0 Universe License Available at: https://www.texturecan.com/models/details/528/#google_vignette
@@ -85,6 +85,8 @@
       <br>Paper airplane by Poly by Google [CC-BY] via Poly Pizza - renamed Paper_airplane
       <br>Flying saucer by Poly by Google [CC-BY] via Poly Pizza renamed as Flying_saucer
     </p>
+
+
   </div>
 
   <script>
