--- a/game.html
+++ b/game.html
@@ -146,6 +146,10 @@
           border-radius: 5px;
         }
 
+        @keyframes spin {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+    }
 
         
         /* #loadingScreen {
@@ -261,8 +265,9 @@
         </div>
     </div>
     
-    <div id="loadingScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.9); color: white; z-index: 20; display: flex; justify-content: center; align-items: center;">
+    <div id="loadingScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.9); color: white; z-index: 20; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <p>Loading assets, please wait...</p>
+        <div id="loadingSpinner" style="width: 40px; height: 40px; border: 5px solid #444; border-top: 5px solid #ba03fc; border-radius: 50%; margin-top: 10px; animation: spin 3s linear infinite;"></div>
     </div>
 
 <!-- Winning Modal -->
