--- a/level2.html
+++ b/level2.html
@@ -245,7 +245,7 @@
 
 <div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
     <div id="dialogueBox" style="text-align: center; padding: 20px; background-color: rgba(0, 0, 0, 0.8); border: 2px solid white; border-radius: 10px; width: 50%;">
-        <p id="dialogueText">Oh wanderer, how could you input the wrong coordinites?</p>
+        <p id="dialogueText">Oh wanderer, how could you input the wrong coordinates?</p>
         <div style="display: flex; justify-content: center; align-items: center">
         </div>
         <button id="nextButton" style="margin-top: 20px; padding: 10px 20px; font-size: 16px;">Next</button>
