--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
       <li>Oxygen Meter - You get 100 units of oxygen</li>
       <li>If you need help - Click The Cat</li>
       <li>Esc - Restart/Leave game</li>
-      <li>Shift - Opens inventory</li>
+      <li>Shift - Sprint</li>
+      <li>Cntrl - Opens inventory</li>
       <li>Left mouse click - To select objects</li>
       <li>Right mouse click and drag - Look around the map</li>
+      <li>V - Change prespective</li>
     </ul>
   </div>
 
@@ -82,7 +84,8 @@
       <br>Small Stack of Paper by Jarlan Perez [CC-BY] via Poly Pizza - renamed as Small_Stack_of_Paper
       <br>Paper by Poly by Google [CC-BY] via Poly Pizza
       <br>Manila Envelope by Jarlan Perez [CC-BY] via Poly Pizza - renamed as Manila_Envelope
-      <br>Paper airplane by Poly by Google [CC-BY] via Poly Pizza - renamed Paper_airplane
+      <br>Toilet paper by Poly by Google [CC-BY] via Poly Pizza renamed as Toilet_paper
+      <br>Rock Forms 3 by S. Paul Michael [CC-BY] via Poly Pizza
       <br>Flying saucer by Poly by Google [CC-BY] via Poly Pizza renamed as Flying_saucer
     </p>
 
