--- a/level3.html
+++ b/level3.html
@@ -158,7 +158,7 @@
     <div id="healthBar">Oxygen: 100/100</div>
 
         <!--Popup when clicking on cat-->
-        <div id="myModal">
+        <!-- <div id="myModal">
             <div id="modal-content">
                 <img id="catImage" src="public/Graphics/SpaceCat.png" alt="cat_sprite">
                 <p id="catConversation" style="color: aliceblue; font-size: large;"></p>
@@ -169,7 +169,7 @@
                 </div>
                 <span id="closeModal">&times;</span>
             </div>
-        </div>
+        </div> -->
 
     <div id="myModal2">
         <div id="modal-content2">
