--- a/game.html
+++ b/game.html
@@ -206,9 +206,11 @@
 
     <!-- Exit Menu -->
     <div id="exitMenu">
-        <h2>Are you sure?</h2>
+        <h2>Astral Meow-nu</h2>
         <button id="mainMenuButton">Main Menu</button>
         <button id="restartButton">Restart Level</button>
+        <label for="volumeControl">Music Volume:</label>
+        <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5">
     </div>
 
     <!-- You Died Message -->
