--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
       <br>Dineo
       <br>Busisiwe
     </p>
-    <p>All our music and sound effects are royalty-free from [PixaBay](https://pixabay.com)</p>
+    <p>
+      <br>All our music and sound effects are royalty-free from [PixaBay](https://pixabay.com)
+      <br>cat meow by tuberatanka -- https://freesound.org/s/110011/ -- License: Creative Commons 0
+    </p>
     <p>Imported Models:
-      <br>Astronaut model: https://poly.pizza/m/0oBRDJ9Zl9, https://poly.pizza/m/dLHpzNdygsg
       <br>The barrel model by by `TextureCan.com` under the Creative Commons CC0 1.0 Universe License Available at: https://www.texturecan.com/models/details/528/#google_vignette
       <br>The skull model by `martinjario` on Sketchlab CC BY 4.0. Available at: https://skfb.ly/JrST
       <br>Rock by Danni Bittman [CC-BY] via Poly Pizza
@@ -88,7 +90,7 @@
       <br>Rock Forms 3 by S. Paul Michael [CC-BY] via Poly Pizza
       <br>Flying saucer by Poly by Google [CC-BY] via Poly Pizza renamed as Flying_saucer
       <br>"Animated Floating Astronaut in Space Suit Loop" (https://skfb.ly/o9pPT) by LasquetiSpice is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
-      <br>cat meow by tuberatanka -- https://freesound.org/s/110011/ -- License: Creative Commons 0
+      
     </p>
 
 
