--- a/credits.html
+++ b/credits.html
@@ -107,6 +107,7 @@
       <br>Toilet paper by Poly by Google [CC-BY] via Poly Pizza renamed as Toilet_paper
       <br>Rock Forms 3 by S. Paul Michael [CC-BY] via Poly Pizza
       <br>Flying saucer by Poly by Google [CC-BY] via Poly Pizza renamed as Flying_saucer
+      <br>cat meow II by tuberatanka -- https://freesound.org/s/110010/ -- License: Creative Commons 0
       <br>"Animated Floating Astronaut in Space Suit Loop" (https://skfb.ly/o9pPT) by LasquetiSpice is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
       
     </p>
