--- a/level3.html
+++ b/level3.html
@@ -203,7 +203,8 @@ canvas {
 
     <!-- Health Bar -->
     <div id="healthBar">Oxygen: 80/100</div>
-
+    <!-- View Mode Message -->
+    <div id="viewModeMessage">Third Person View - Press V to switch</div>
         <!--Popup when clicking on cat-->
         <div id="myModal">
             <div id="modal-content">
