fixes for lamp (lvl 1 cat dialouge bug free)

--- a/game.html
+++ b/game.html
@@ -151,6 +151,7 @@
     }
 
     </style>
+
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r142/three.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -227,6 +228,7 @@
                 <button id="dontHelpButton">I do not need help.</button>
 
             </div>
+            <span id="closeModal">&times;</span>
         </div>
 
     </div>
