janky press e to pick up

--- a/level2.html
+++ b/level2.html
@@ -237,6 +237,7 @@
     <div style="background-color: #b800ccbb; padding: 20px; border-radius: 10px; text-align: center;">
       <h2 style="color: black;">Congratulations!</h2>
       <p style="color: black;">You have successfully collected all the crystals and won the level!</p>
+      <p style="color: black;">If you are in First Person. Press V then proceed.</p>
       
       <!-- Proceed Button -->
        <a href="./level3.html">
