fix how to play size

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <p>Game developed by Galaxy Meow.</p>
     <p>Our Team:</p>
     <ul>
-      <li>Claire</li>
-      <li>Wendy</li>
-      <li>Mayuri</li>
-      <li>Chloe</li>
-      <li>Dineo</li>
-      <li>Busisiwe</li>
+      <li>Claire Newman</li>
+      <li>Wendy Maboa</li>
+      <li>Mayuri Balakistan</li>
+      <li>Chloe Dube</li>
+      <li>Dineo Chiloane</li>
+      <li>Busisiwe Vemba</li>
     </ul>
     <a href="credits.html" target="_blank" id="seeMoreCredits">See More</a>
   </div>
