--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="modal-header">
         How to Play <span class="modal-close" id="closeHowToPlay">×</span>
     </div>
-    <p>Welcome to <strong>Space Paws Odyssey!</strong> Here’s the deal:</p>
+    <p>Welcome to <strong>Space Paws Odyssey!</strong> Here’s the deal,:</p>
     <p>You’ve been sent by the SPO (Space Paws Odyssey) on a super-secret intergalactic mission, but... oops! Your space cruiser had a little “oopsie” on the Moon. Now, it’s up to you to find your way home!</p>
     <ul>
         <li><strong>Level 1:</strong> The Moon has everything you need to fix up a teleporter! Sniff out an antenna, a button, a battery, a console, and a circuit board. With these, you’ll be able to teleport to the next adventure! (P.S. Your oxygen’s full at 100, so breathe easy… for now!)</li>
