--- a/credits.html
+++ b/credits.html
@@ -108,12 +108,8 @@
       <br>Toilet paper by Poly by Google [CC-BY] via Poly Pizza renamed as Toilet_paper
       <br>Rock Forms 3 by S. Paul Michael [CC-BY] via Poly Pizza
       <br>Flying saucer by Poly by Google [CC-BY] via Poly Pizza renamed as Flying_saucer
+      <br>cat meow II by tuberatanka -- https://freesound.org/s/110010/ -- License: Creative Commons 0
       <br>"Animated Floating Astronaut in Space Suit Loop" (https://skfb.ly/o9pPT) by LasquetiSpice is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
-      <br>Blue Quartz by `cgtrader.com`, copyright free can be found at: https://www.cgtrader.com/free-3d-models/various/various-models/dimond-game-asset
-      <br>Lava Obsidian by `rigmodels.com`,copyright free can be found at: https://rigmodels.com/model.php?view=Crystal._Scan.-3d-model__a4a559d70c3e447fa878518e7aca79a8#google_vignette
-      <br>Chest of of gold by `cgtrader.com`, copyright free can be found at: https://www.cgtrader.com/free-3d-models/furniture/cabinet/low-poly-game-object-modeling
-      <br>Red Ruby Gem by `cgtrader.com`, copyright free can be found at: https://www.cgtrader.com/items/3705550/download-page
-      
       
     </p>
     </div>
