Revert "Merge branch 'Chloe' of https://github.com/CGV-project-Galaxy-Meow/Galaxy-Meow into Chloe"
This reverts commit a844b050cb0cc6063f998de29458a3a7c34bcdd6, reversing
changes made to 754cd9aeb5027046093066539f97318dae4d42b0.

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <p>Game developed by Galaxy Meow.</p>
     <p>Our Team:</p>
     <ul>
-      <li>Claire Newman</li>
-      <li>Wendy Maboa</li>
-      <li>Mayuri Balakistan</li>
-      <li>Chloe Dube</li>
-      <li>Dineo Chiloane</li>
-      <li>Busisiwe Vemba</li>
+      <li>Claire</li>
+      <li>Wendy</li>
+      <li>Mayuri</li>
+      <li>Chloe</li>
+      <li>Dineo</li>
+      <li>Busisiwe</li>
     </ul>
     <a href="credits.html" target="_blank" id="seeMoreCredits">See More</a>
   </div>
@@ -88,7 +88,7 @@
     <div class="modal-header">
         How to Play <span class="modal-close" id="closeHowToPlay">×</span>
     </div>
-    <p>Welcome to <strong>Space Paws Odyssey!</strong> Here’s the deal,:</p>
+    <p>Welcome to <strong>Space Paws Odyssey!</strong> Here’s the deal:</p>
     <p>You’ve been sent by the SPO (Space Paws Odyssey) on a super-secret intergalactic mission, but... oops! Your space cruiser had a little “oopsie” on the Moon. Now, it’s up to you to find your way home!</p>
     <ul>
         <li><strong>Level 1:</strong> The Moon has everything you need to fix up a teleporter! Sniff out an antenna, a button, a battery, a console, and a circuit board. With these, you’ll be able to teleport to the next adventure! (P.S. Your oxygen’s full at 100, so breathe easy… for now!)</li>
